<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="371dp"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:fontFamily="@font/alatsi"
        android:gravity="center"
        android:text="@string/tv_login"
        android:textColor="#673AB7"
        android:textFontWeight="20"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/log_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/andika_new_basic_bold"
        android:gravity="center_horizontal"
        android:hint="@string/input_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/log_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/andika_new_basic_bold"
        android:gravity="center_horizontal"
        android:hint="@string/tv_fullname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/andika_new_basic_bold"
        android:gravity="center_horizontal"
        android:hint="@string/input_password"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/andika_new_basic_bold"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/log_button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/bt_login"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tx_daftar"
        android:textColor="#636363" />

    <TextView
        android:id="@+id/log_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tx_daftar2"
        android:textColor="#DD2C00" />

</LinearLayout>